--- a/src/app/recipe-widget/recipe-widget.component.html
+++ b/src/app/recipe-widget/recipe-widget.component.html
@@ -1,4 +1,7 @@
 <div class="content-card m-1">
+  <!-- <div class="recipe_myRecipeBook text-center" [style.border-color]="blnRecipeSave?'gold':'lightgrey'" (click)="saveToMyRecipes()"> 
+    <i class="fas fa-bookmark recipe_myRecipeBook--icon" [style.color]="blnRecipeSave?'gold':'lightgrey'"></i>
+  </div> -->
   <!-- MEALTYPE ICON -->
   <div class="recipe_mealtype text-center" [ngClass]="getMealType(recipe?.meal_type)" matTooltip="{{recipe?.meal_type_info}}">
     <i *ngIf="recipe?.meal_type == 1" class="fas fa-drumstick-bite" style="vertical-align: text-bottom; margin-top: 7px; margin-left: 2px;"></i>
@@ -38,7 +41,7 @@
     <a class="content-card-title-link" [routerLink]="['/recipe', recipe._id]">{{recipe.name}}</a>
   </div>
   <!-- BADGES -->
-  <div class="content-card-badges mb-1" style="height: 70px;" >
+  <div class="content-card-badges mb-1" style="max-height: 70px;" >
     <span *ngFor="let badge of recipe.tags| slice:0:4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">{{badge}}</span>
     <span *ngIf="recipe.tags.length > 4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">+</span>
   </div>
