--- a/src/app/recipe/recipe.component.css
+++ b/src/app/recipe/recipe.component.css
@@ -97,3 +97,60 @@ and (orientation: portrait){
     -moz-border-radius: 6px!important;
     -webkit-border-radius: 6px!important;
 }
+
+.save-button{
+    position: absolute;
+    display: inline-block; 
+    /* margin-top: 12px;  */    
+    color: #e0e0e0;
+    right: 30px;
+    top: 20px;
+    color: orange;
+}
+
+.save-button-text{
+    display: inline-block; 
+    vertical-align: sub;
+}
+
+.save-button-action{
+    display: inline-block; 
+}
+
+.save-button-action--save{
+    border: 1px solid orange;  
+    background-color: white;  
+    color: orange;
+    cursor: pointer;
+}
+
+.save-button-action--saved{
+    border: 1px solid white;
+    background-color: orange;
+    color: white;
+}
+
+.save-button-icon{
+    display: inline-block; 
+    vertical-align: -webkit-baseline-middle;
+}
+
+.button-circle{
+    padding: 0;
+    width: 37px;
+    text-align: center;
+    -webkit-border-radius: 100%;
+    border-radius: 25px;
+}
+
+.button-large.button-circle{
+    width: 120px;
+    height: 37px;
+    padding: 0;
+}
+
+.button-xl.button-circle{
+    width: 60px;
+    height: 60px;
+    padding: 0;
+}
