--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -20,7 +20,17 @@
       </div>            
     </div>
     <div class="row">
-      <div class="col-12 col-md-8">
+      <div class="col-12 col-md-8 position-relative">
+        <div class="save-button mr-1 d-block position-absolute">        
+          <div *ngIf="!blnRecipeSaved" class="save-button-action save-button-action--save button-large button-circle" (click)="saveToMyRecipes()">          
+            <i class="save-button-icon fas fa-plus mr-2"></i>
+            <span class="save-button-text">opslaan</span>
+          </div>
+          <div *ngIf="blnRecipeSaved" class="save-button-action save-button-action--saved button-large button-circle">
+            <i class="save-button-icon fas fa-check mr-2"></i>
+            <span class="save-button-text">opgeslagen</span>
+          </div>
+        </div>
         <div class="recipe-carousel" [style.background-image]="'url(' + recipe?.images[0]?.source + ')'"></div>
       </div>
     </div>
@@ -67,7 +77,7 @@
     <div class="row p-0 m-0">
       <div class="col-12 col-md-8 pt-4">      
         <div class="row instructions-content" style="">
-          <div class="col-6 pr-5 ingredients-container">
+          <div class="col-12 col-md-6 pr-5 ingredients-container">
             <div class="ingredients-title">
               <h2>ingrediënten</h2>
             </div>
@@ -77,7 +87,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-6 prep-container">
+          <div class="col-12 col-md-6 prep-container">
             <div class="prep-title">
               <h2>bereiding</h2>
             </div>
