--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,11 +1,11 @@
 <blog-navbar></blog-navbar>
 <section class="container-fluid background-cover background-1 background-fill">
-  <div class="container" style="" style="">
+  <div class="container">
     <div class="row m-0" style="height: 100%;">
       <div class="highlight-card-big col-12 col-md-6 p-0 m-0" style="height: 350px">
         <div [routerLink]="['/recipe',highlights[0]?.recipes[0]?._id]" class="h-100" style="overflow: hidden;">
-          <div class="highlight-card-image h-100" [style.background-image]="'url(' + highlights[0]?.recipes[0]?.images[0]?.source + ')'"></div>
-          <div class="recipe-card-rotd" style="">Recept van de dag</div>
+          <div class="highlight-card-image h-100" [style.background-image]="'url(' + highlights[0]?.recipes[0]?.imgUrl + ')'"></div>
+          <div class="recipe-card-rotd">Recept van de dag</div>
           <a  style="height: 100%; width: 100%; "></a>
           <div class="recipe-card-info mt-4 p-3">
             <div class="recipe-card-info-title py-4">{{highlights[0]?.recipes[0]?.name}}</div>
@@ -16,7 +16,7 @@
       </div>
       <div class="col-12 col-md-6 p-0 px-md-3">
         <article *ngFor="let article of highlights[0]?.articles" class="highlight-article-container ml-0 ml-md-3" style="background-color: white; cursor:pointer;">
-          <div class="small-card-post-content d-flex mb-3" style="">
+          <div class="small-card-post-content d-flex mb-3">
             <div style="width: 100px; height: 100px; overflow: hidden;">
               <div class="small-card-post-image d-inline-block" [style.background-image]="'url(' + article.files[0]?.source + ')'" style="width: 100px; height: 100px; background-position: center; background-size: cover; overflow: hidden;">
                 <a class="" style="background-color:crimson; width: 100px; height: 100px; margin-right: 24px;"></a>
