--- a/src/app/recipe-widget/recipe-widget.component.html
+++ b/src/app/recipe-widget/recipe-widget.component.html
@@ -3,48 +3,54 @@
     <i class="fas fa-bookmark recipe_myRecipeBook--icon" [style.color]="blnRecipeSave?'gold':'lightgrey'"></i>
   </div> -->
   <!-- MEALTYPE ICON -->
-  <div class="recipe_mealtype text-center" [ngClass]="getMealType(recipe?.meal_type)" matTooltip="{{recipe?.meal_type_info}}">
+  <!-- <div class="recipe_mealtype text-center" [ngClass]="getMealType(recipe?.meal_type)" matTooltip="{{recipe?.meal_type_info}}">
     <i *ngIf="recipe?.meal_type == 1" class="fas fa-drumstick-bite" style="vertical-align: text-bottom; margin-top: 7px; margin-left: 2px;"></i>
     <i *ngIf="recipe?.meal_type == 2" class="fas fa-fish" style="vertical-align: text-bottom; margin-top: 7px; margin-left: 2px;"></i>
     <i *ngIf="recipe?.meal_type == 3" class="fas fa-leaf" style="vertical-align: text-bottom; margin-top: 6px; margin-right: 1px;"></i>
     <i *ngIf="recipe?.meal_type == 4" class="fab fa-envira" style="vertical-align: text-bottom; margin-top: 7px; margin-left: 2px;"></i>
-  </div>
+  </div> -->
   <!-- MEAL IMAGE -->
   <div class="content-card-image-container">
-    <div [routerLink]="['/recipe', recipe._id]" class="content-card-image" [style.background-image]="'url(' + recipe?.images[0]?.source + ')'">
+    <div [routerLink]="['/recipe', recipe._id]" class="content-card-image" [style.background-image]="'url(' + recipe?.imgUrl + ')'">
       <a  style="height: 100%; width: 100%; "></a>
     </div>            
   </div>
-  <!-- MEAL DATA           -->
+  <!-- MEAL DATA -->
   <div class="row content-card-data content-card-data--recipe m-0 text-center">
-    <div class="time col-4 p-1">
+    <div class="time col-6 p-1">
       <div>Serveertijd</div>              
       <div><i class="far fa-clock"></i> {{recipe.time_spend.totalTime}}</div>
     </div>
-    <div class="healthy col-4 p-1">
+    <!-- CALORIES -->
+    <div class="time col-6 p-1">
+      <div>Calorieën</div>              
+      <div><i class="fas fa-fire"></i> {{recipe.nutr[0].a}}</div>
+    </div>
+    <!-- HEALHTY -->
+    <!-- <div class="healthy col-4 p-1">
       <div>Gezond</div>
       <div>
         <i *ngIf="recipe?.health_index == 1" class="fas fa-plus" style="color: seagreen;"></i>
         <i *ngIf="recipe?.health_index == 1" class="fas fa-plus" style="color: seagreen;"></i>
         <i *ngIf="recipe?.health_index == 2" class="fas fa-plus" style="color: gold;"></i>
         <i *ngIf="recipe?.health_index == 3" class="fas fa-minus" style="color: orangered;"></i>
-      </div>
-      <!-- <div>{{recipe.health_index}}</div> -->
-    </div>
-    <div class="difficulty col-4 p-1">
+      </div> 
+    </div> -->
+    <!-- DIFFICULTY -->
+    <!-- <div class="difficulty col-4 p-1">
       <div>Moeilijkheid</div>
       <div>{{recipe.difficulty_index}}</div>
-    </div>
+    </div> -->
   </div>
   <!-- MEAL NAME -->
   <div class="content-card-title content-card-title--recipe p-2">
     <a class="content-card-title-link" [routerLink]="['/recipe', recipe._id]">{{recipe.name}}</a>
   </div>
   <!-- BADGES -->
-  <div class="content-card-badges mb-1">
+  <!-- <div class="content-card-badges mb-1">
     <span *ngFor="let badge of recipe.tags| slice:0:4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">{{badge}}</span>
     <span *ngIf="recipe.tags.length > 4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">+</span>
-  </div>
+  </div> -->
   <!-- MEAL INTERACTION -->
   <div class="row mx-0 content-card-actions">
     <div class="actions-chef-container">
@@ -58,14 +64,15 @@
           </span>                  
         </span>                
       </button> -->
-      <div class="content-card-review mx-0 d-block">
+      <!-- RATING -->
+      <!-- <div class="content-card-review mx-0 d-block">
         <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage >= 1?'orange':'lightgrey'"></i>
         <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage >= 2?'orange':'lightgrey'"></i>
         <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage >= 3?'orange':'lightgrey'"></i>
         <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage >= 4?'orange':'lightgrey'"></i>
         <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage >= 5?'orange':'lightgrey'"></i>
         <div class="p-2 d-inline-block"><span>{{recipe?.rateCount || 0}}</span></div>
-      </div>
+      </div> -->
       <!-- <div class="save-button mr-1 d-block">        
         <span class="save-button-text mr-2">save</span>
         <div class="save-button-action button-large button-circle" (click)="saveRecipe()">          
