--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,11 +1,11 @@
 <blog-navbar></blog-navbar>
-<section class="container-fluid">
+<section class="container-fluid p-0">
   <div class="container">
     <div class="row px-3 pt-5 pb-3">
       <div class="col-12 col-md-8 p-0 m-0">
         <h1 class="title">{{recipe?.name}}</h1>
       </div>
-      <div class="col-12 col-md-4">
+      <!-- <div class="col-12 col-md-4">
         <div class="content-card-review mx-0 d-block my-3" (click)="reviewRecipe()">
           <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage > 0.5?'orange':'lightgrey'"></i>
           <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage > 1.5?'orange':'lightgrey'"></i>
@@ -14,14 +14,14 @@
           <i class="fas fa-star p-2" [style.color]="recipe?.rateAverage > 4.5?'orange':'lightgrey'"></i>
           <div class="p-2 d-inline-block"><span>{{recipe?.rateCount || 0}} review</span></div>
         </div>
-      </div>
+      </div> -->
       <div class="col-12 col-md-8 p-0 m-0">
         <p class="subtitle">{{recipe?.description}}</p>
       </div>            
     </div>
     <div class="row">
       <div class="col-12 col-md-8 position-relative">
-        <div class="save-button mr-1 d-block position-absolute">        
+        <!-- <div class="save-button mr-1 d-block position-absolute">        
           <div *ngIf="!blnRecipeSaved" class="save-button-action save-button-action--save button-large button-circle" (click)="saveToMyRecipes()">          
             <i class="save-button-icon fas fa-plus mr-2"></i>
             <span class="save-button-text">opslaan</span>
@@ -30,8 +30,8 @@
             <i class="save-button-icon fas fa-check mr-2"></i>
             <span class="save-button-text">opgeslagen</span>
           </div>
-        </div>
-        <div class="recipe-carousel" [style.background-image]="'url(' + recipe?.images[0]?.source + ')'"></div>
+        </div> -->
+        <div class="recipe-carousel" [style.background-image]="'url(' + recipe?.imgUrl + ')'"></div>
       </div>
     </div>
     <div class="row">        
@@ -42,16 +42,16 @@
           <div *ngIf="blnShowSource" style="color: #a0a0a0;">
             <div>
               <small>Recept geïnspireerd door: <span>{{recipe?.source?.name}}</span></small>
-              <small style="float: right;">Image: {{recipe?.images[0]?.insp}}</small>
+              <!-- <small style="float: right;">Image: {{recipe?.images[0]?.insp}}</small> -->
             </div>
             <div>
-              <span>{{recipe?.source?.link}}</span>
+              <span><a [href]='recipe?.source?.link' target="_blanck">{{recipe?.source?.link}}</a></span>
             </div>                                    
           </div>
         </div>
         <div class="row m-3 text-center recipe-panel-stats">
-          <div class="time col-4 p-0" style="border-right: 1px solid #e0e0e0">
-            <div><strong>tijd</strong></div>
+          <div class="time col-12 p-0">
+            <div><strong><i class="far fa-clock"></i></strong></div>
             <!-- <div class="row m-0"> -->
               <!-- <div class="col-6 p-0" style="width: 50%;">                 -->
                 <div>{{recipe?.time_spend?.totalTime}}</div>
@@ -61,14 +61,14 @@
               <!-- </div> -->
             <!-- </div> -->
           </div>
-          <div class="healthy col-4 p-0" style="border-right: 1px solid #e0e0e0">
+          <!-- <div class="healthy col-4 p-0" style="border-right: 1px solid #e0e0e0">
             <div><strong>Gezond</strong></div>
             <div>{{recipe?.health_index}}</div>
           </div>
           <div class="difficutly col-4 p-0">
             <div><strong>moeilijkheid</strong></div>
             <div>{{recipe?.difficulty_index}}</div>
-          </div>
+          </div> -->
         </div>
       </div>      
     </div>
@@ -76,14 +76,14 @@
   <div class="container instuctions-container pb-5" style="border-bottom: 2px solid #f2f2f2;">
     <div class="row p-0 m-0">
       <div class="col-12 col-md-8 pt-4">      
-        <div class="row instructions-content" style="">
+        <div class="row instructions-content">
           <div class="col-12 col-md-6 pr-5 ingredients-container">
             <div class="ingredients-title">
               <h2>ingrediënten</h2>
             </div>
             <div class="ingredients-info">
               <ul class="ingredients-list">
-                <li *ngFor="let ing of recipe?.ingredients" class="ingredients-list-item">{{ing}}</li>                
+                <li *ngFor="let ing of recipe?.ingr" class="ingredients-list-item">{{ing}}</li>                
               </ul>
             </div>
           </div>
@@ -92,7 +92,7 @@
               <h2>bereiding</h2>
             </div>
             <div class="prep-info">
-              <div *ngFor="let prep of recipe?.recipeInstructions" class="prep-info-item pb-2">
+              <div *ngFor="let prep of recipe?.steps" class="prep-info-item pb-2">
                 {{prep}}
               </div>            
             </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="nutrition-info">
           <ul class="nutrition-list">
-            <li *ngFor="let nut_item of recipe?.nutrition" [ngSwitch]="nut_item.descr" class="nutrition-list-item">
+            <li *ngFor="let nut_item of recipe?.nutr" [ngSwitch]="nut_item.d" class="nutrition-list-item">
               <div *ngSwitchCase="'calories'">
                 <div *ngIf="nut_item.a != '0' && nut_item.a != ''" class="pt-1" style="font-weight: 500;"><span class="text-transform: uppercase;">energie</span> <span style="float: right;">{{nut_item.a}} {{nut_item.u}}</span></div>
               </div>
